--- a/css/style.css
+++ b/css/style.css
@@ -23,9 +23,10 @@
     box-shadow: 10px 10px 10px #a3b1c6, -10px -10px 15px #ffffff;
 }
 hr{
-    width:36%;
+    width:200px;
     display: block;
-    margin: 0 auto;
+    margin-top: 1px;
+    padding: 0;
     justify-self: center;
 
 }
