--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,44 @@
 
 
 body{
-    background-color: #f3f4f7;
+    background-color: hsl(0, 0%, 100%);
+    color:#080808;
+    margin: 15px;
 }
 
+.btn-branding-outline{
+    border:1px solid #141414;
+    padding: 2px 15px;
+    border-radius: 15px;
+    font-weight: bold;
+    margin-right: 10px;
+}
 
-
+.profile{
+    width:400px;
+    margin:0 auto;
+    display:block;
+    height: 400px;
+    border-radius: 50%;
+}
+.btn-branding-contact{
+    display: block;
+    margin: 0 auto;
+    width:fit-content;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    color:#10131d;
+    background:#ffffff;
+    font-weight: bold;
+    border-radius: 15px;
+    padding: 15px;
+    text-align: center;
+    text-decoration: none;
+    /* box-shadow: -10px -10px z #ffffff; */
+}
 
 a, .nav-link{
-    color:rgb(255, 153, 0);
+    color:rgb(15, 15, 15);
     text-decoration: none;
 }
 h1{
@@ -20,22 +50,10 @@ h1{
 .contact-me-box{
     background: #edeef0;
     border-radius: 15px;
-    box-shadow: 10px 10px 10px #a3b1c6, -10px -10px 15px #ffffff;
+    box-shadow: -10px -10px 15px #ffffff;
 
 }
-.btn-branding-contact{
-    display: block;
-    margin: 0 auto;
-    width:fit-content;
-    margin-top: 60px;
-    margin-bottom: 60px;
-    background:#edeef0;
-    border-radius: 15px;
-    padding: 15px;
-    text-align: center;
-    text-decoration: none;
-    box-shadow: 10px 10px 10px #a3b1c6, -10px -10px 15px #ffffff;
-}
+
 hr{
     width:200px;
     display: block;
