--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,13 @@ body{
     opacity: 0.5;
 }
 
+span{
+    padding: 4px;
+    border-radius: 8px;
+    font-size: small;
+    font-weight: bold;
+}
+
 
 a, .nav-link{
     color:rgb(15, 15, 15);
