--- a/css/style.css
+++ b/css/style.css
@@ -90,13 +90,15 @@ body{
 }
 
 .profile-links{
-    position:fixed;
-    bottom: 10px;
+    display: block;
+    margin: 0 auto;
+    margin-top: 30px;
+    text-align: center;
 }
 .profile-links a{
-    font-size: 20px;
+    font-size: 25px;
     opacity: 0.7;
-    padding:10px;
+    padding:15px;
     color:rgb(0, 0, 0);
     border-radius: 50%;
 }
