--- a/css/style.css
+++ b/css/style.css
@@ -33,17 +33,21 @@ body{
 }
 .menu-bar{
     margin-top: 150px; 
-    left: 0; 
     position: fixed; 
 
 }
- li{
-    list-style: none;
+.menu-bar a{
+    display: block;
+    justify-self: left;
+    /* margin-left: 20px; */
     font-size: 18px;
-    font-weight: 700;
+    font-weight: 400;
     color:#ffffff;
-    text-align:left;
+    text-align:center;
     line-height: 70px;
+ }
+ .menu-bar i{
+    padding-right: 35px;
  }
 
  .container-fluid{
