--- a/css/style.css
+++ b/css/style.css
@@ -25,11 +25,8 @@ body{
     background-position:center;
     top:0;
     position:fixed;
-    /* width: 100%; */
-    /* border:2px solid rgb(233, 13, 97); */
     border-radius: 50%;
     padding: 50px;
-    /* width:fit-content; */
 }
 .menu-bar{
     margin-top: 150px; 
@@ -38,20 +35,20 @@ body{
 }
 .menu-bar a{
     display: block;
-    justify-self: left;
-    /* margin-left: 20px; */
+    /* justify-self: left; */
     font-size: 18px;
     font-weight: 400;
     color:#ffffff;
-    text-align:center;
+    /* text-align:center; */
     line-height: 70px;
+    padding: 10px;
  }
  .menu-bar i{
-    padding-right: 35px;
+    padding-right: 15px;
  }
 
  .container-fluid{
-    padding:0 20px;
+    /* padding:0 20px; */
     justify-content: center;
  }
 
@@ -124,9 +121,10 @@ body{
 }
 
 .contact-me-box{
-    background: #edeef0;
+    background: #ffffff;
     opacity: 0.7;
 }
+
 
 span{
     padding: 4px;
@@ -168,4 +166,41 @@ h6{
 a:hover{
     color:rgb(255, 255, 255);
     background:#86a9c4;
+}
+.menu-bar a:hover{
+    background-color: #ffffff;
+    color: var(--primary-color);
+    border-radius: 15px;
+}
+
+@media screen and (max-width: 900px) {
+    .menu-bar{
+        /* margin: 0; */
+    }
+    .menu-bar a{
+        font-size: 10px;
+        padding: 0;
+        padding-left: 2px;
+        line-height: 40px;
+    }
+    .profile-small{
+        background-size: 150%;
+        border-radius: 50%;
+        padding: 40px;
+        left: 6%
+    }
+    h1, h2{
+        font-weight: bold;
+        font-size: medium;
+    }
+    .skill i{
+        font-size: 20px;
+    }
+    p{
+        font-size: 14px;
+    }
+    .btn-branding-contact{
+        font-size: 14px;
+    }
+
 }
