--- a/css/style.css
+++ b/css/style.css
@@ -35,11 +35,9 @@ body{
 }
 .menu-bar a{
     display: block;
-    /* justify-self: left; */
     font-size: 18px;
     font-weight: 400;
     color:#ffffff;
-    /* text-align:center; */
     line-height: 70px;
     padding: 10px;
  }
@@ -64,12 +62,23 @@ body{
     text-decoration: none;
 }
 
-.profile{
-    width:400px;
-    margin:0 auto;
-    display:block;
-    height: 300px;
-    border-radius: 25px;
+.hero{
+    background-color: #86a9c4;
+    color:#ffffff;
+    top:0;
+    padding: 10px 50px 50px;
+    border-bottom-right-radius: 15cm;
+    border-top-right-radius:1cm ;
+}
+.hero h4{
+    background-color: #c0cdd8bd;
+    background-repeat: no-repeat;
+    background-position:center;
+    padding: 30px;
+    border: 6px solid #ffffff;
+    border-bottom-right-radius: 5cm;
+    border-top-right-radius:15cm ;
+
 }
 
 .btn-branding-contact{
@@ -173,10 +182,7 @@ a:hover{
     border-radius: 15px;
 }
 
-@media screen and (max-width: 900px) {
-    .menu-bar{
-        /* margin: 0; */
-    }
+@media screen and (max-width: 800px) {
     .menu-bar a{
         font-size: 10px;
         padding: 0;
